# new-continents

./: CMakeLists.txt
include/Entities/: Entity.hpp  Player.hpp  Worker.hpp
include/Interface/: ActionMenu.hpp  BuildMenu.hpp  Button.hpp  Cursor.hpp  GameInterface.hpp  IconButton.hpp  Text.hpp  WordButton.hpp
include/Managers/: TaskManager.hpp  WorkerManager.hpp
include/Maths/: Pathfinding.hpp
include/Objects/: Object.hpp  TreeObject.hpp
include/Resources/: TileSet.hpp
include/Scenes/: GameScene.hpp
include/Tasks/: DestroyTask.hpp  Task.hpp
include/World/: Chunk.hpp  Map.hpp  MapGenerator.hpp  Tile.hpp
res/scripts/generation/: mapgen.py
src/: Main.cpp
src/Entities/: Entity.cpp  Player.cpp  Worker.cpp
src/Interface/: ActionMenu.cpp  BuildMenu.cpp  Button.cpp  Cursor.cpp  GameInterface.cpp  IconButton.cpp  Text.cpp  WordButton.cpp
src/Managers/: TaskManager.cpp  WorkerManager.cpp
src/Maths/: Pathfinding.cpp
src/Objects/: Object.cpp
src/Resources/: TileSet.cpp
src/Scenes/: GameScene.cpp
src/Tasks/: DestroyTask.cpp  Task.cpp
src/World/: Chunk.cpp  Map.cpp  MapGenerator.cpp  Tile.cpp
